# agency-agents

./: .env.example  .gitignore  CLAUDE.md  MRO-data-sources.md  RLVR-research.md  pyproject.toml  run.sh
.github/workflows/: lint-agents.yml
frontend/: index.html  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
hedge_fund/: __init__.py  __main__.py  cli.py  config.py  main.py
hedge_fund/agents/: __init__.py  ben_graham.py  cathie_wood.py  fundamentals.py  macro.py  michael_burry.py  peter_lynch.py  portfolio_manager.py  risk_manager.py  sentiment.py  stanley_druckenmiller.py  technicals.py  valuation.py  warren_buffett.py
hedge_fund/api/: __init__.py  routes.py  server.py
hedge_fund/backtesting/: __init__.py  engine.py  metrics.py  portfolio.py
hedge_fund/data/: __init__.py  api.py  cache.py  crawler.py  models.py
hedge_fund/graph/: __init__.py  state.py  workflow.py
hedge_fund/llm/: __init__.py  models.py
hedge_fund/utils/: __init__.py  display.py  progress.py
logistics-pricing/: generate_sample_data.py  prepare.py  pricing_model.py  program.md  results.tsv
logistics-pricing/data/: quotes.csv
mro-arbitrage/: CONTACT-RESEARCH.md  CONTACTS-AND-PIPELINE.md  README.md  analyze_sec_filings.py  analyze_trade_flows.py  arbitrage_detector.py  build_price_db.py  dashboard.py  deal_calculator.py  ingest_ebay.py  ingest_faa_registry.py  ingest_sdr.py  ingest_usaspending.py  lookup_part.py  monitor_ads.py  run_all.py  supplier_directory.py  web_dashboard.py
scripts/: convert.sh  install.sh  lint-agents.sh
(+63 files in other folders)
